--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=psi-planner
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/psiplanner-db
+spring.datasource.username=psiplanner
+spring.datasource.password=psiplanner
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.flyway.locations=classpath:db/migration
