--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.show-sql=true
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.flyway.locations=classpath:db/migration
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
