global application improvements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.flyway.locations=classpath:db/migration
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+
+# Security Constants for JWT integration
+security.const.prefix=Bearer
+security.const.key=SECRET_KEY
+security.const.expiration=3600000
