Added Docker integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=psi-planner
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/psiplanner-db
+spring.datasource.url=jdbc:postgresql://postgres:5432/psiplanner-db
 spring.datasource.username=psiplanner
 spring.datasource.password=psiplanner
 
